@@ -1,83 +1,73 @@
 /*
- * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.
  */
 
 package com.openjiuwen.agentevolving.optimizer.llm_call;
 
 import com.openjiuwen.agentevolving.optimizer.BaseOptimizer;
 import com.openjiuwen.core.foundation.prompt.PromptTemplate;
+import com.openjiuwen.core.operator.Operator;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 /**
- * Base class for LLMCall dimension optimizers.
- * <p>
- * Only optimizes Operators exposing system_prompt/user_prompt.
- * <p>
- * Mirrors Python's {@code openjiuwen.agent_evolving.optimizer.llm_call.base.LLMCallOptimizerBase}.
- * 
- * @since 0.1.7
+ * Base class for LLM-call dimension optimizers.
+ *
+ * <p>Mirrors Python's {@code LLMCallOptimizerBase} in
+ * {@code openjiuwen/agent_evolving/optimizer/llm_call/base.py}.</p>
  */
 public abstract class LLMCallOptimizerBase extends BaseOptimizer {
-    /**
-     * LLMCallOptimizerBase.
-     * 
-     * @since 0.1.7
-     */
+
+    public static final String SYSTEM_PROMPT = "system_prompt";
+    public static final String USER_PROMPT = "user_prompt";
+
     protected LLMCallOptimizerBase() {
         this.domain = "llm";
     }
 
     /**
-     * defaultTargets.
-     * 
-     * @return the result
-     * @since 0.1.7
+     * Default prompt targets for LLM-call optimization.
+     *
+     * @return system and user prompt targets
      */
     @Override
     public List<String> defaultTargets() {
-        return Arrays.asList("system_prompt", "user_prompt");
+        return List.of(SYSTEM_PROMPT, USER_PROMPT);
     }
 
     /**
-     * Check if target is frozen based on get_tunables.
-     * 
-     * @param op Operator instance
-     * @param target Target name
-     * @return True if target is frozen
-     * @since 0.1.7
+     * Preserve BaseOptimizer filtering and logging semantics.
+     *
+     * @param operators candidate operators
+     * @param targets tunable names
+     * @return filtered operators
      */
-    protected boolean isTargetFrozen(Object op, String target) {
-        try {
-            return !extractTunableNames(op).contains(target);
-        } catch (ReflectiveOperationException e) {
-            // Ignore
-        }
-        return true;
+    public static Map<String, Operator> filterOperators(Map<String, Operator> operators, List<String> targets) {
+        return BaseOptimizer.filterOperators(operators, targets);
     }
 
     /**
-     * getPromptTemplate.
-     * 
-     * @param op op
-     * @param target target
-     * @return the result
-     * @since 0.1.7
+     * Check if the target is frozen by looking at exposed tunables.
+     *
+     * @param operator operator under optimization
+     * @param target target tunable name
+     * @return true when target is not tunable
      */
-    @SuppressWarnings("unchecked")
-    protected PromptTemplate getPromptTemplate(Object op, String target) {
-        try {
-            java.lang.reflect.Method method = op.getClass().getMethod("getState");
-            Object state = method.invoke(op);
-            if (state instanceof Map) {
-                Object content = ((Map<String, Object>) state).get(target);
-                return PromptTemplate.builder().content(content != null ? String.valueOf(content) : "").build();
-            }
-        } catch (ReflectiveOperationException e) {
-            // Ignore
-        }
-        return PromptTemplate.builder().content("").build();
+    protected boolean isTargetFrozen(Operator operator, String target) {
+        return operator == null || !operator.getTunables().containsKey(target);
+    }
+
+    /**
+     * Build a PromptTemplate from operator state.
+     *
+     * @param operator operator exposing state
+     * @param target target key in state
+     * @return prompt template wrapping current content, or empty content when missing
+     */
+    protected PromptTemplate getPromptTemplate(Operator operator, String target) {
+        Map<String, Object> state = operator == null ? Map.of() : operator.getState();
+        Object content = state == null ? "" : state.getOrDefault(target, "");
+        return PromptTemplate.builder().content(content == null ? "" : content).build();
     }
 }
